--- a/game.html
+++ b/game.html
@@ -7,22 +7,36 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script>
-    
+var ballX = 75;
+
 var canvas, canvasContext;
 
 window.onload = function() {
+    //var ballX = 0;
     canvas = document.getElementById('gameCanvas');
     canvasContext = canvas.getContext('2d');
+
+    var framesPerSecond = 30;
+    setInterval(updateAll, 1000/framesPerSecond);
+}
+
+function updateAll() {
+
+   ballX += 5;
+   console.log(ballX);
 
     canvasContext.fillStyle= 'black';
     canvasContext.fillRect(0,0, canvas.width, canvas.height);
 
     canvasContext.fillStyle = 'white';
     canvasContext.beginPath();
-    canvasContext.arc(100,100, 10,0,Math.PI*2,true);
+    canvasContext.arc(ballX, 100,10, 0, Math.PI*2, true);
     canvasContext.fill();
-
 }
+
+
+
+
 </script>
 </body>
 </html>
