--- a/game.html
+++ b/game.html
@@ -8,6 +8,9 @@
 
 <script>
 var ballX = 75;
+var ballY = 75;
+var ballSpeedX = 5;
+var ballSpeedY = 7;
 
 var canvas, canvasContext;
 
@@ -22,15 +25,38 @@ window.onload = function() {
 
 function updateAll() {
 
-   ballX += 5;
-   console.log(ballX);
+   ballX += ballSpeedX;
+   ballY += ballSpeedY;
+
+    if (ballX  < 0 ) {
+        ballSpeedX *= -1;
+    }
+
+    if (ballX > canvas.width) {
+        ballSpeedX *= -1;
+    }
+
+
+///////////////////////////////////////////////////////////////
+
+
+    if (ballY < 0 ) {
+        ballSpeedY *= -1;
+    }
+
+    if (ballY > canvas.height) {
+        ballSpeedY *= -1;
+    }
+
+   console.log("X is " + ballX);
+   //console.log(" while Y is " + ballY);
 
     canvasContext.fillStyle= 'black';
     canvasContext.fillRect(0,0, canvas.width, canvas.height);
 
     canvasContext.fillStyle = 'white';
     canvasContext.beginPath();
-    canvasContext.arc(ballX, 100,10, 0, Math.PI*2, true);
+    canvasContext.arc(ballX, ballY,10, 0, Math.PI*2, true);
     canvasContext.fill();
 }
 
