Made it to 1.14

--- a/game.html
+++ b/game.html
@@ -12,7 +12,22 @@ var ballY = 75;
 var ballSpeedX = 5;
 var ballSpeedY = 7;
 
+const PADDLE_WIDTH = 100;
+const PADDLE_THICKNESS = 10;
+var paddleX = 400;
+
+
 var canvas, canvasContext;
+
+function updateMousePos(evt) {
+    var rect = canvas.getBoundingClientRect();
+    var root = document.documentElement;
+
+    var mouseX = evt.clientX - rect.left - root.scrollLeft;
+    // var mouseY = evt.clientY = rect.top = root.scrollTop;
+
+    paddleX = mouseX - PADDLE_WIDTH / 2;
+}
 
 window.onload = function() {
     //var ballX = 0;
@@ -21,10 +36,16 @@ window.onload = function() {
 
     var framesPerSecond = 30;
     setInterval(updateAll, 1000/framesPerSecond);
+
+    canvas.addEventListener('mousemove', updateMousePos);
 }
 
 function updateAll() {
+    moveAll();
+    drawAll();
+}
 
+function moveAll() {
    ballX += ballSpeedX;
    ballY += ballSpeedY;
 
@@ -50,18 +71,29 @@ function updateAll() {
 
    console.log("X is " + ballX);
    //console.log(" while Y is " + ballY);
-
-    canvasContext.fillStyle= 'black';
-    canvasContext.fillRect(0,0, canvas.width, canvas.height);
-
-    canvasContext.fillStyle = 'white';
-    canvasContext.beginPath();
-    canvasContext.arc(ballX, ballY,10, 0, Math.PI*2, true);
-    canvasContext.fill();
 }
 
+function drawAll() {
+    colorRect(0,0, canvas.width,canvas.height,'black'); // clear screen
+
+    colorCircle(ballX,ballY, 10, 'white'); //draw ball
+
+    colorRect(paddleX, canvas.height - PADDLE_THICKNESS, PADDLE_WIDTH, PADDLE_THICKNESS, 'white');
 
 
+}
+
+function colorRect(topLeftX, topLeftY, boxWidth, boxHeight, fillColor) {
+    canvasContext.fillStyle= fillColor;
+    canvasContext.fillRect(topLeftX,topLeftY, boxWidth,boxHeight);
+}
+
+function colorCircle(centerX,centerY, radius, fillColor) {
+    canvasContext.fillStyle = fillColor;
+    canvasContext.beginPath();
+    canvasContext.arc(centerX,centerY, radius, 0, Math.PI*2, true);
+    canvasContext.fill();
+}
 
 </script>
 </body>
