--- a/game.html
+++ b/game.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><meta content="text/html;charset=utf-8" http-equiv="Content=Type">
+<head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content=Type">
     <meta content="utf-8" http-equiv="encoding"> 
 </head>
 <body>
