Made it through 1.16

--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@ var ballSpeedY = 7;
 
 const PADDLE_WIDTH = 100;
 const PADDLE_THICKNESS = 10;
+const PADDLE_DIST_FROM_EDGE = 60;
 var paddleX = 400;
 
 
@@ -46,15 +47,20 @@ function updateAll() {
     drawAll();
 }
 
+function ballReset() {
+    ballX = canvas.width / 2;
+    ballY = canvas.height / 2;
+}
+
 function moveAll() {
    ballX += ballSpeedX;
    ballY += ballSpeedY;
 
-    if (ballX  < 0 ) {
+    if (ballX  < 0 ) {  // left
         ballSpeedX *= -1;
     }
 
-    if (ballX > canvas.width) {
+    if (ballX > canvas.width) { // right
         ballSpeedX *= -1;
     }
 
@@ -62,16 +68,35 @@ function moveAll() {
 ///////////////////////////////////////////////////////////////
 
 
-    if (ballY < 0 ) {
+    if (ballY < 0 ) {   // top
         ballSpeedY *= -1;
     }
 
-    if (ballY > canvas.height) {
-        ballSpeedY *= -1;
+    if (ballY > canvas.height) { // bottom
+        ballReset();
     }
+
+    var paddleTopEdgeY = canvas.height - PADDLE_DIST_FROM_EDGE;
+    var paddleBottomEdgeY = paddleTopEdgeY + PADDLE_THICKNESS;
+
+    var paddleLeftEdgeX = paddleX;
+    var paddleRightEdgeX = paddleLeftEdgeX + PADDLE_WIDTH;
+
+    if ( ballY > paddleTopEdgeY &&  // below the top of paddle
+         ballY < paddleBottomEdgeY &&   //  above bottom of paddle
+         ballX > paddleLeftEdgeX &&   //  right of the left side of paddle
+         ballX < paddleRightEdgeX ) {  //  left of the right side of paddle
+
+         ballSpeedY *= -1;
+
+         var centerOfPaddleX = paddleX + PADDLE_WIDTH / 2;
+         var ballDistFromPaddleCenterX = ballX - centerOfPaddleX;
+         ballSpeedX = ballDistFromPaddleCenterX * 0.35;
+
+         }
 
    console.log("X is " + ballX);
-   //console.log(" while Y is " + ballY);
+   console.log(" while Y is " + ballY);
 }
 
 function drawAll() {
@@ -79,7 +104,8 @@ function drawAll() {
 
     colorCircle(ballX,ballY, 10, 'white'); //draw ball
 
-    colorRect(paddleX, canvas.height - PADDLE_THICKNESS, PADDLE_WIDTH, PADDLE_THICKNESS, 'white');
+    colorRect(paddleX, canvas.height - PADDLE_DIST_FROM_EDGE, PADDLE_WIDTH, 
+    PADDLE_THICKNESS, 'white');
 
 
 }
