--- a/game.html
+++ b/game.html
@@ -21,14 +21,17 @@ var paddleX = 400;
 
 var canvas, canvasContext;
 
+var mouseX = 0;
+var mouseY = 0;
+
 function updateMousePos(evt) {
-    var rect = canvas.getBoundingClientRect();
-    var root = document.documentElement;
+	var rect = canvas.getBoundingClientRect();
+	var root = document.documentElement;
 
-    var mouseX = evt.clientX - rect.left - root.scrollLeft;
-    // var mouseY = evt.clientY = rect.top = root.scrollTop;
+	mouseX = evt.clientX - rect.left - root.scrollLeft;
+	mouseY = evt.clientY - rect.top - root.scrollTop;
 
-    paddleX = mouseX - PADDLE_WIDTH / 2;
+	paddleX = mouseX - PADDLE_WIDTH/2;
 }
 
 window.onload = function() {
@@ -99,13 +102,16 @@ function moveAll() {
    console.log(" while Y is " + ballY);
 }
 
+
 function drawAll() {
-    colorRect(0,0, canvas.width,canvas.height,'black'); // clear screen
+	colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
 
-    colorCircle(ballX,ballY, 10, 'white'); //draw ball
+	colorCircle(ballX,ballY, 10, 'white'); // draw ball
 
-    colorRect(paddleX, canvas.height - PADDLE_DIST_FROM_EDGE, PADDLE_WIDTH, 
-    PADDLE_THICKNESS, 'white');
+	colorRect(paddleX, canvas.height-PADDLE_DIST_FROM_EDGE,
+				PADDLE_WIDTH, PADDLE_THICKNESS, 'white');
+
+	colorText(mouseX+","+mouseY, mouseX, mouseY, 'yellow');
 }
 
 function colorRect(topLeftX, topLeftY, boxWidth, boxHeight, fillColor) {
@@ -118,6 +124,11 @@ function colorCircle(centerX,centerY, radius, fillColor) {
     canvasContext.beginPath();
     canvasContext.arc(centerX,centerY, radius, 0, Math.PI*2, true);
     canvasContext.fill();
+}
+
+function colorText(showWords, textX,textY, fillColor) {
+	canvasContext.fillStyle = fillColor;
+	canvasContext.fillText(showWords, textX, textY);
 }
 
 </script>
