turns out 2.26 was just a suggestion to label braces so section 2 over

--- a/game.html
+++ b/game.html
@@ -66,13 +66,11 @@ function brickReset() {
                 brickGrid[i] = true;
             } else {
                 brickGrid[i] = false;
-            }
-    }
+            } // end else
+    } // end for-loop for bricks
     // just a little confirming
     //brickGrid[5] = false;
-
-
-}
+} // end function
 
 
 window.onload = function() {
