I'm making second HTML and seperate JS file

--- a/game.html
+++ b/game.html
@@ -18,6 +18,8 @@ var ballSpeedY = 5;
 // this part will be replaced with arrays version later
 
 // 1/18/2019 - made it to 2.26
+// 1/18/2019 - made it to 3.28
+
 
 
 const BRICK_W = 100;
