--- a/racin.html
+++ b/racin.html
@@ -7,6 +7,6 @@
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-<script src="breakout.js"></script>
+<script src="the-racin.js"></script>
 </body>
 </html>
