sect 11.86: split some common grfx functions into separate file

--- a/racin.html
+++ b/racin.html
@@ -8,5 +8,6 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="the-racin.js"></script>
+<script src="GraphicsCommon.js"></script>
 </body>
 </html>
