--- a/racin.html
+++ b/racin.html
@@ -7,7 +7,12 @@
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-<script src="the-racin.js"></script>
 <script src="GraphicsCommon.js"></script>
+<script src="car.js"></script>
+<script src="track.js"></script>
+<script src="input.js"></script>
+<script src="the-racin.js"></script>
+
+
 </body>
 </html>
