integrated image load functions into one file

--- a/racin.html
+++ b/racin.html
@@ -8,6 +8,7 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="GraphicsCommon.js"></script>
+<script src="imageloading.js"></script>
 <script src="car.js"></script>
 <script src="track.js"></script>
 <script src="input.js"></script>
