renamed files and added png files for adventure game

--- a/AdventDung.html
+++ b/AdventDung.html
@@ -9,10 +9,10 @@
 
 <script src="js/GraphicsCommon.js"></script>
 <script src="js/imageloading.js"></script>
-<script src="js/car.js"></script>
-<script src="js/track.js"></script>
+<script src="js/warrior.js"></script>
+<script src="js/world.js"></script>
 <script src="js/input.js"></script>
-<script src="js/the-racin.js"></script>
+<script src="js/AdventDung.js"></script>
     <!-- new comment -->
 
 
